<resources>
    <string name="app_name">Rome Guide App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="museums">Museums</string>
    <string name="famous_places">Famous Places</string>
    <string name="hotels">Hotels</string>
    <string name="hospitals">Hospitals</string>
    <string name="coloseum">Coloseum</string>
    <string name="pantheon">Pantheon</string>
    <string name="st_peter_basilica">St. Peter\'s Basilica</string>
    <string name="trevi_fountain">Trevi Fountain</string>
    <string name="spanish_steps">Spanish Steps</string>
    <string name="roman_forum">Roman Forum</string>
    <string name="castel_san_angelo">Castel San\'t Angelo</string>
    <string name="piazza_navona">Piazza Navona</string>
    <string name="campo_de_fiori">Campo de\' Fiori</string>
    <string name="saint_peter_square">Saint Peter\'s Square</string>
    <string name="basilica_santa_maggiore">Basilica Santa Maggiore</string>
    <string name="galleria_borghese">Galleria Borghese</string>
    <string name="palatine_hill">Palatine Hill</string>
    <string name="capitoline_museums">Capitoline Museums</string>
    <string name="piazza_del_popolo">Piazza del Popolo</string>
    <string name="victor_emanuel_monument">Victor Emmanuel Monument</string>
    <string name="national_roman_museum">National Roman Museum</string>
    <string name="appian_way">Appian Way</string>
    <string name="baths_of_caracalla">Baths of Caracalla</string>
    <string name="vatican_museums">Vatican Museums</string>
    <string name="ostia_antica">Ostia Antica</string>
    <string name="santa_maria_in_trastevere">Santa Maria in Trastevere</string>
    <string name="bocca_della_verità">Bocca della Verità</string>
    <string name="hadrian_villa">Hadrian\'s Villa</string>
    <string name="janiculum">Janiculum</string>
    <string name="quirinal_palace">Quirinal Palace</string>
    <string name="arch_of_titus">Arch of Titus</string>
    <string name="trajan_column">Trajan\'s Column</string>
    <string name="national_etruscan_museum">National Etruscan Museum</string>
    <string name="fatebenefratelli">Fatebenefratelli</string>
    <string name="bambin_gesù">Bambino Gesù</string>
    <string name="rome_american_hospital">Rome American Hospital</string>
    <string name="concordia">Concordia</string>
    <string name="appia_antica_resort">Appia Antica Resort</string>
    <string name="portrait_roma">Portrait Roma</string>
    <string name="the_fifteen_keys">The Fifteen Keys</string>
    <string name="artemide">Artemide Hotel</string>
    <string name="jk_place">J.K. Place</string>
    <string name="martis_palace">Martis Palace</string>
    <string name="coloseum_description">The most internationally recognized symbol of Rome, the Colosseum has a long and bloody history. It was inaugurated in 80 A.D. with 100 days of games, including gladiatorial combats and animal fights. It was the largest amphitheater in the Roman Empire and is believed to have packed up to 50,000 people inside. Despite centuries of neglect—it was used as a quarry until the eighteenth century—it has remained intact (for the most part).</string>
    <string name="pantheon_description">Though the name refers to a temple for all the gods, the Pantheon is actually the burial place of Rome’s kings and other prominent figures, including Raphael. The temple was built between 118 and 128 A.D. on the site of an older temple. A feat of architectural ingenuity, it was the world’s largest dome until the modern era, has been called the world’s only architecturally perfect building, and is the best-preserved monument of Imperial Rome. Walk inside and look up—the oculus in the dome is open to the sky, letting sunlight filter in.</string>
    <string name="st_peter_basilica_description">St. Peter’s Basilica may be a pilgrimage site for Catholics, but even non-believers can appreciate the church’s architectural majesty. The original dates back to 349 A.D., when Constantine had a basilica built over the tomb of St. Peter, the first pope. That church was razed to make way for the current one, the world’s largest church at 18,000 square yards, which has been standing on this spot since 1626. Inside you’ll find Bernini’s masterful altarpiece—the great bronze baldacchino—and Michelangelo’s Pietà.</string>
    <string name="spanish_steps_description">Fascinating in its contradictions, the Piazza di Spagna is both democratic and home to the city’s fanciest boutiques on Via dei Condotti, Rome’s legendary shopping street. Climb the famous steps leading to the Trinità dei Monti church to admire the piazza and Bernini’s ship-shaped fountain from above. If you’re feeling ambitious, climb to the Villa Medici for stunning views of the Centro Storico. Off to the side of the steps, you’ll find the Keats-Shelley Memorial House, one of Rome’s excellent under-the-radar museums.</string>
    <string name="trevi_fountain_description">Any trip to Rome would be incomplete without a visit to the Trevi Fountain. Nicola Salvi’s awe-inspiring Baroque masterpiece features a marble statue of Neptune at the center, surrounded by tritons. Legend has it that anyone who throws a coin in the fountain will return to Rome. Unfortunately, the gorgeous fountain tends to be overrun by tourists vying for that perfect selfie angle and street hawkers selling cheap souvenirs. Visit early in the morning or late at night, when the crowds disperse.</string>
    <string name="galleria_borghese_description">Nowhere in Rome—or dare we say, the world—will you find such a magnificent collection of Baroque art. The villa itself is a masterpiece, commissioned by seventeenth-century Cardinal Scipione Borghese to house his treasures, including Antonio Canova’s sculpture of Napoleon Bonaparte’s sister as Venus Victrix, Bernini’s Apollo and Daphne, and Caravaggio’s self portrait as Bacchus. Tickets must be reserved in advance for slotted times. After perusing the villa’s galleries, take a leisurely stroll through the idyllic Villa Borghese park.</string>
    <string name="campo_de_fiori_description">Shopping for fresh fruit and vegetables at the mercato is a way of life for many Romans. Lots of neighborhoods have their own markets, and the produce tends to be very high quality—perfect for preparing salads and sandwiches for a picnic. Even if you’re just visiting, you can immerse yourself in the local culture by shopping at the market. The one at Campo de’ Fiori bustles with vendors every morning except Sunday and is one of the city’s most popular.</string>
    <string name="janiculum_description">Rome was built on seven hills, and while Gianicolo (or Janiculum) isn’t technically one of them, it is the highest vantage point from which to see the city. Roman lovers gather here at dusk (it’s an infamous makeout spot), and street vendors may try to sell you glowing tchotchkes. But ignore all that and focus on the panoramic vistas. From up here, you can see all the most important monuments: the Spanish Steps, Palazzo Venezia, and beyond. The long and winding road can be quite a hike to the top, so it’s better to go by car or Vespa if you can.</string>
    <string name="roman_forum_description">Rome was built on seven hills, and while Gianicolo (or Janiculum) isn’t technically one of them, it is the highest vantage point from which to see the city. Roman lovers gather here at dusk (it’s an infamous makeout spot), and street vendors may try to sell you glowing tchotchkes. But ignore all that and focus on the panoramic vistas. From up here, you can see all the most important monuments: the Spanish Steps, Palazzo Venezia, and beyond. The long and winding road can be quite a hike to the top, so it’s better to go by car or Vespa if you can.</string>
    <string name="piazza_navona_description">One of the most popular public spaces in Rome, the magnificent, oval-shaped Piazza Navona is lined with restaurants, gelaterias, souvenir shops, and the Museo di Roma inside the Renaissance Palazzo Braschi. The city’s Baroque art is on full display here. Bernini’s Fontana dei Quattro Fiumi features exquisitely carved figures representing the world’s four great rivers, and legend has it that the figure with his arms extended is recoiling in horror from the church of Sant’Agnese in Agone by Borromini, Bernini’s rival.</string>
    <string name="vatican_museum_description">You could easily spend a whole day exploring the area around the Vatican. Start at the Piazza di San Pietro, which Bernini designed to look like arms extended in an embrace. Besides St. Peter’s Basilica, the absolute must-see is the Vatican Museums, which contain Michelangelo’s Sistine Chapel. Other highlights in the 1,400-room palace include the Raphael Rooms, old master paintings, and antique sculptures. Climb to the top for splendid views of Vatican City and the Tiber. At its base you can see the Ponte Sant’Angelo.</string>
    <string name="capitoline_museum_description">The Capitoline museums lay claim to being the world\'s oldest national museums founded in 1471. The Capitoline Museums are made of two buildings facing each other on the impressive Piazza del Campidoglio. The ground floor is still used partly as a municipal register office. Most of the building house sculptures, though there are art galleries on the second floor. The most famous single exhibit is the “She Wolf”, a major symbol of Rome. The collections are closely linked to the city of Rome, and most of the exhibits come from the city itself.</string>
    <string name="national_roman_museum_description">The National Museum of Rome is in fact four separate museums covered by a single ticket. Just steps from the Termini train, metro and bus station are two of the four Museo Nazionale Romano museums. Palazzo Massimo has a great collection of frescos with early Roman statues (the boxer, the discus thrower etc). Virtually next door is the Baths of Diocletian the largest of Roman baths and for a bonus you have the Michelangelo built Santa Maria degi Angeli church which the early Christians built over the site of the baths.</string>
    <string name="national_etruscan_museum_description">Built for Pope Julius III between 1550 and 1555, Villa Giulia is a magnificent Renaissance palace built in what once were the outskirts of the city. The museum is known for its extensive art collections, but mostly for beauty of the building and its lovely gardens. The museum’s works are spread over two floors and are arranged according to period and place of origin. The collections include pottery, funeral urns, jewellery, bronzes and sculptures Among the museum’s most valuable objects are a sarcophagus from the year 520 BC, as well as several terracotta figures.</string>
    <string name="coloseum_address">Piazza del Colosseo, 1, 00184</string>
    <string name="pantheon_address">Piazza della Rotonda, 00186</string>
    <string name="st_peter_basilica_address">Piazza San Pietro, 00120</string>
    <string name="spanish_steps_address">Piazza di Spagna, 00187</string>
    <string name="trevi_fountain_address">Piazza di Trevi, 00187</string>
    <string name="galleria_borghese_address">Piazzale Scipione Borghese, 5, 00197</string>
    <string name="campo_de_fiori_address">Piazza Campo de\' Fiori, 00186</string>
    <string name="janiculum_address">Metropolitan City of Rome, 00118</string>
    <string name="roman_forum_address">Via della Salara Vecchia, 5/6, 00186</string>
    <string name="piazza_navona_address">Piazza Navona, 00186</string>
    <string name="vatican_museum_address">Viale Vaticano, 00165</string>
    <string name="arch_of_titus_address">Via Sacra, 00186</string>
    <string name="coloseum_phone">06 3996 7700</string>
    <string name="artemide_page">www.hotelartemide.it</string>
    <string name="coloseum_hours">8.30AM–7PM</string>
</resources>