<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/home" />
        <item
            android:id="@+id/famous_places"
            android:icon="@drawable/baseline_public_black_18dp"
            android:title="@string/famous_places" />
        <item
            android:id="@+id/museums"
            android:icon="@drawable/position"
            android:title="@string/museums" />
        <item
            android:id="@+id/hotels"
            android:icon="@drawable/baseline_location_city_black_18dp"
            android:title="@string/hotels" />
        <item
            android:id="@+id/hospitals"
            android:icon="@drawable/baseline_local_hospital_black_18dp"
            android:title="@string/hospitals" />
    </group>
</menu>